# cgal

./: .gitattributes  .gitignore  New_Changes  README.md
Alpha_wrap_3/examples/Alpha_wrap_3/: CMakeLists.txt  sparse_wrapping_with_region_growing.cpp  triangle_mesh_wrap.cpp
Alpha_wrap_3/siggraph/labs/comparisons_mc_dc/: CMakeLists.txt
Alpha_wrap_3/siggraph/labs/comparisons_mc_dc/Isosurfacing_3/: Cartesian_grid_3.h  Cartesian_grid_oracle.h  Dual_contouring_3.h  Function_oracle.h  Marching_cubes_3.h  lods.cpp  offset.cpp  types.h  util.h
Alpha_wrap_3/siggraph/labs/comparisons_mc_dc/Isosurfacing_3/Isosurfacing_3/internal/: Marching_cubes_3_internal.h  Polygon_soup.h
Anisotropic_mesh_2/examples/Anisotropic_mesh_2/: CMakeLists.txt  Nash.cpp  geodesic_generator_on_starset.cpp  geodesic_generator_on_tr.cpp  geodesic_grid_generator.cpp  geodesic_grid_generator_2.cpp  grid_generator.cpp  histogram_from_external_mesh.cpp  mesher_example.cpp
Anisotropic_mesh_3/demo/: Anisotropic_mesh_function.h  Anisotropic_meshing_thread.cpp  Anisotropic_meshing_thread.h  C3t3_type.h  CMakeLists.txt  Implicit_surface_type.h  Implicit_surface_type_fwd.h  Io_c3t3_plugin.cpp  Io_constrained_surface_implicit_plugin.cpp  Io_image_plugin.cpp  Io_implicit_function_plugin.cpp  Io_off_plugin.cpp  MainWindow.cpp  MainWindow.h  Mesh_3.cpp  Mesh_3_optimization_plugin.cpp  Mesh_3_plugin.cpp  Mesh_3_plugin_implicit_surface_cgal_code.cpp  Mesh_3_plugin_polyhedron_cgal_code.cpp  Mesh_function.h  Polyhedral_surface_type.h  Polyhedral_surface_type_fwd.h  Polyhedron_type.h  Polyhedron_type_fwd.h  Scene_constrained_surface_implicit_item.cpp  Scene_constrained_surface_implicit_item.h  Scene_constrained_surface_implicit_item_config.h  Scene_implicit_function_item.cpp  Scene_implicit_function_item.h  Scene_implicit_function_item_config.h  Scene_polyhedron_item.cpp  Scene_polyhedron_item.h  Scene_starset3_item.cpp  Scene_starset3_item.h  Scene_starset3_item_config.h  StarSet_type.h  StdAfx.h  anisotropic_meshing_options.h  mesh_3_anisotropic_plugin.cpp  mesh_3_anisotropic_plugin_implicit_cgal_code.cpp  (+1 more)
Anisotropic_mesh_3/demo/constrained_surfaces_implicit/: CMakeLists.txt  Chair_function.cpp  Constrained_surface_implicit_interface.h  Double_ellipsoid_function.cpp  Ellipsoid_function.cpp  Pretzel_function.cpp  Sphere_function.cpp  StdAfx.cpp  StdAfx.h  Tanglecube_function.cpp  Torus_function.cpp
Anisotropic_mesh_3/examples/Anisotropic_mesh_3/: CMakeLists.txt  Voronoi_painters.cpp  bench_parameters.cpp  cell_mesher_example.cpp  cell_mesher_poly_example.cpp  chair_example.cpp  compare_ellipsoids_iso_aniso.cpp  comparisons_example.cpp  cyclide_example.cpp  cylinder_example.cpp  debug_example.cpp  double_ellipsoid_example.cpp  ellipsoid_example.cpp  geodesic_Campen_c2t3.cpp  geodesic_Campen_c3t3.cpp  geodesic_Campen_grid.cpp  geodesic_Campen_starset.cpp  geodesic_Campen_triangulation.cpp  geodesic_Konukoglu_grid.cpp  geodesic_grid_generator.cpp  geodesic_grid_generator_2.cpp  grid_generator.cpp  histogram_from_external_mesh.cpp  implicit_surface_with_curvature_based_metric_field.cpp  implicit_surface_with_curvature_mf.cpp  implicit_surface_with_specified_metric_field.cpp  medial_axis_with_powercrust.cpp  mesher_lvl_example.cpp  metric_field_experiment.cpp  off_to_pts.cpp  point_set_poisson_with_curvature_mf.cpp  polyhedral_surface_with_curvature_mf.cpp  readme_provide_poles_to_mesher.txt  refinement_condition_is_between_planes.h  small_angle_between_planes_example.cpp  todo.odt  torus_example.cpp
Anisotropic_mesh_3/examples/Anisotropic_mesh_3/Data/: dino_fine.off  elephant-fine.off  ellipsoid.off  fertility.off  fertility_fine.off  helmet_fi ne.off  triceratops_fine.off
Anisotropic_mesh_3/examples/Anisotropic_mesh_3/experiments/: .directory  ani_1_100_cylinder.off  ani_1_10_0.08_cylinder.off  ani_1_10_0.09_1_cylinder.off  ani_small_1_100_0.1_0.1_cylinder.off  ani_small_closed_cylinder.off  ani_small_closed_smallr0_cylinder.off  ellipsoid_10_1_1_incons_eps0.05.off  ellipsoid_50_1_1_incons.off  evolution_of_fist_and_curv_on_an_ellipsoid.ods  fertility_eps01_approx04.off  sphere_shock_1st_try.off  sphere_shock_2nd_try.off  sphere_shock_3rd_try.off  sphere_shock_4th_try.off  sphere_shock_hyper.off  torus_10_1_aniso.off  torus_10_1_aniso_good_looking_12665.off  torus_10_1_iso_16726.off  torus_25_1_iso_16717.off  torus_50_1_32100_iso.off  torus_50_1_aniso.off  torus_50_1_quarter_37200_aniso.off  torus_numbers.txt  ugly_dino.off  ugly_dino_2.off  ugly_fertility.off  ugly_triceratops.off
Anisotropic_mesh_3/examples/Anisotropic_mesh_3/experiments/Performance/: perf_with_complicated_graphs.ods  performance.ods
Anisotropic_mesh_3/examples/Anisotropic_mesh_3/experiments/SIGGRAPH/: chair_curvature_eps01.off  chair_curvature_eps09.off  elephant_curv_tbu.off  elephant_shock_tbu.off  ellipsoid_500_1_1_curv.off  ellipsoid_50_1_1_curv.off  fertility_curv.off  helmet.off  meshes_description.txt  pseudo_cyclid_low_eps.off  sphere_shock.off  torus_100_1_aniso_1_16th_slice.off
Anisotropic_mesh_3/examples/Anisotropic_mesh_3/experiments/SIGGRAPH/meshes_with_post_ processing/: fertility_simpli_and_subdiv.off  fertility_subtle_simplification.off  triceratops_1k.off
Anisotropic_mesh_3/examples/Anisotropic_mesh_3/experiments/Torus_1-10_incons_steps/: .directory  out_1100.off  out_1200.off  out_1300.off  out_1400.off  out_1500.off  out_1600.off  out_1700.off  out_1800.off  out_1900.off  out_2000.off  out_2100.off  out_2200.off  out_2300.off  out_2400.off  out_2500.off  out_2600.off  out_2700.off  out_2800.off  out_2900.off  out_3000.off  out_3100.off  out_3200.off  out_3300.off  out_3400.off  out_3500.off  out_3600.off  out_3700.off  out_3800.off  out_3900.off  out_4000.off  out_4100.off  out_4200.off  out_4300.off  out_4400.off  out_4500.off  out_4600.off  out_4700.off  out_4800.off  out_4900.off  (+27 more)
Anisotropic_mesh_TC/examples/Anisotropic_mesh_TC/: CMakeLists.txt  aniso_brute.cpp  tests.cpp
Installation/: CMakeLists.txt
Surface_mesh_simplification/examples/Surface_mesh_simplification/: CMakeLists.txt  parallel_edge_collapse.cpp
(+423 files in other folders)
